<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".menu_opciones.ContactoActivity">
    <include android:id="@+id/miActionBar"
        layout="@layout/action_bar"/>
    <LinearLayout
        android:layout_below="@+id/miActionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/etNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pide_nombre"
                android:textSize="@dimen/tv_acercade_titulo"
            />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pide_email"
                android:textSize="@dimen/tv_acercade_titulo"
                android:inputType="textEmailAddress"
            />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/etMensaje"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pide_mensaje"
                android:textSize="@dimen/tv_acercade_subt"
                android:inputType="textMultiLine"
                android:lines="8"
                android:minLines="2"
                android:gravity="bottom|left"
                android:maxLines="10"
                android:scrollbars="vertical"
            />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
    <Button
        android:id="@+id/btEnviar"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enviar_comentario"
        android:textSize="@dimen/txt_boton_enviar"
        android:background="@color/colorAccent"
        android:onClick="enviaEmail"
        />

</RelativeLayout>
